// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/SearchHint should match snapshot, with title 1`] = `
<Fragment>
  <h4
    className="search-hint__title"
  >
    <FormattedMessage
      defaultMessage="Search Options"
      id="search_bar.usage.title"
    />
  </h4>
  <ul
    className="search-hint__suggestions-list"
    role="list"
  >
    <li
      className="search-hint__suggestions-list__option"
      key="From:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          From:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages from a user"
          id="search_list_option.from"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="In:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          In:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages in a channel"
          id="search_list_option.in"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="On:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          On:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages on a date"
          id="search_list_option.on"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="Before:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          Before:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages before a date"
          id="search_list_option.before"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="After:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          After:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages after a date"
          id="search_list_option.after"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="-"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          —
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Exclude search terms"
          id="search_list_option.exclude"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="\\"\\""
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          ""
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages with phrases"
          id="search_list_option.phrases"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;

exports[`components/SearchHint should match snapshot, without title 1`] = `
<Fragment>
  <ul
    className="search-hint__suggestions-list"
    role="list"
  >
    <li
      className="search-hint__suggestions-list__option"
      key="From:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          From:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages from a user"
          id="search_list_option.from"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="In:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          In:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages in a channel"
          id="search_list_option.in"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="On:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          On:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages on a date"
          id="search_list_option.on"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="Before:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          Before:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages before a date"
          id="search_list_option.before"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="After:"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          After:
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages after a date"
          id="search_list_option.after"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="-"
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          —
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Exclude search terms"
          id="search_list_option.exclude"
        />
      </div>
    </li>
    <li
      className="search-hint__suggestions-list__option"
      key="\\"\\""
      onMouseDown={[Function]}
      onMouseOver={[Function]}
    >
      <div
        className="search-hint__suggestion-list__flex-wrap"
      >
        <span
          className="search-hint__suggestion-list__label"
        >
          ""
        </span>
      </div>
      <div
        className="search-hint__suggestion-list__value"
      >
        <FormattedMessage
          defaultMessage="Messages with phrases"
          id="search_list_option.phrases"
        />
      </div>
    </li>
  </ul>
</Fragment>
`;
